tests/NormalTests/paczka2/big_fuzzy/14487923.err
Error in line 13: O57vyEgeIIM A926 6,7
Error in line 21: oeJAAjD S~3 ~7,3
Error in line 33: O57vyEgeIIM S53 3++,4
Error in line 29: veTuNqq A926 86,3
Error in line 45: 11cu S80} 1}7,}
Error in line 41: veTuNqq S802 96,1
Error in line 51: veTuNqq A596 68,4
Error in line 61: O57vyEgeIIM S53 56,9
Error in line 65: oeJAAjD S53 79,6
Error in line 67: A926 S53 57,4
Error in line 96: oeJAAjD A926 26,9
Error in line 95: O57vyEgeIIM S802 27,1
Error in line 105: H885V1b S53 76,6
Error in line 112: Ps2 S802 63,3
Error in line 113: Ps2 A596 12,4
Error in line 126: A926 S53 97,2
Error in line 133: A926.A926.98,7
Error in line 135: oeJAAjD A926 60,8
Error in line 150: H885V1b S802 64,6
Error in line 152: H885V1b S53 5,2
Error in line 154: O57vyEgeIIM S802 83,4
Error in line 131: A926 A926 50,6
Error in line 161: A926 S53 21,2
Error in line 176: veTuNqq S53 17,62
Error in line 174: veTuNqq A926 87,6
Error in line 185: H885V1b S53 5,3
Error in line 192: 11cu A926 22,4
Error in line 196: 11cu S802 74,54
Error in line 194: 11cu S802 21,5
Error in line 212: A926 S53 84,1
Error in line 213: A926 A926 55,4
Error in line 218: H885V1b A926 45,4
Error in line 222: H885V1b S53 57,0
Error in line 230: veTuNqq A596 645,0
Error in line 234: veTuNqq S53 70,9
